--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -1,203 +1,191 @@
 pipeline {
-    agent { label 'jenkins-jenkins-agent' }
+    agent {
+        kubernetes {
+            yaml """
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    jenkins/label: jenkins-jenkins-agent
+spec:
+  serviceAccountName: default
+  containers:
+    - name: python
+      image: python:3.12-slim
+      command: ['cat']
+      tty: true
+    - name: docker
+      image: docker:27-cli
+      command: ['cat']
+      tty: true
+      volumeMounts:
+        - name: docker-sock
+          mountPath: /var/run/docker.sock
+    - name: kubectl
+      image: bitnami/kubectl:latest
+      command: ['cat']
+      tty: true
+    - name: helm
+      image: alpine/helm:3.15.4
+      command: ['cat']
+      tty: true
+    - name: jnlp
+      image: jenkins/inbound-agent:3355.v388858a_47b_33-12
+      args: ['\$(JENKINS_SECRET)', '\$(JENKINS_NAME)']
+  volumes:
+    - name: docker-sock
+      hostPath:
+        path: /var/run/docker.sock
+"""
+        }
+    }
 
     environment {
         REGISTRY = "ghcr.io/YOUR_GITHUB_USERNAME"
         IMAGE    = "django-app"
         TAG      = "latest"
-
         BLUE_RELEASE  = "django-blue"
         GREEN_RELEASE = "django-green"
-
         HOST = "django.local"
-
         COVERAGE_FAIL_UNDER = "80"
     }
 
     stages {
-
         stage('Checkout') {
-            steps {
-                checkout scm
-            }
+            steps { checkout scm }
         }
-
-        // ------------------------------------------------------------
-        // TDD Stage 1: Unit Tests with pytest + coverage
-        // ------------------------------------------------------------
         stage('Run Unit Tests (pytest + coverage)') {
             steps {
-                sh """
-                    set -e
-                    pip install -r requirements.txt
-
-                    coverage run -m pytest
-                    coverage report --fail-under=\$COVERAGE_FAIL_UNDER
-                """
+                container('python') {
+                    sh '''
+                        set -e
+                        pip install -r requirements.txt
+                        coverage run -m pytest
+                        coverage report --fail-under=$COVERAGE_FAIL_UNDER
+                    '''
+                }
             }
         }
-
         stage('Build image') {
             steps {
-                sh """
-                    set -e
-                    docker build -t \$REGISTRY/\$IMAGE:\$TAG .
-                """
+                container('docker') {
+                    sh '''
+                        set -e
+                        docker build -t $REGISTRY/$IMAGE:$TAG .
+                    '''
+                }
             }
         }
-
-        // ------------------------------------------------------------
-        // TDD Stage 2: Container Tests (pytest inside the built image)
-        // ------------------------------------------------------------
         stage('Run Container Tests (pytest inside container)') {
             steps {
-                sh """
-                    set -e
-                    docker run --rm \$REGISTRY/\$IMAGE:\$TAG \
-                      coverage run -m pytest
-
-                    docker run --rm \$REGISTRY/\$IMAGE:\$TAG \
-                      coverage report --fail-under=\$COVERAGE_FAIL_UNDER
-                """
+                container('docker') {
+                    sh '''
+                        set -e
+                        docker run --rm $REGISTRY/$IMAGE:$TAG coverage run -m pytest
+                        docker run --rm $REGISTRY/$IMAGE:$TAG coverage report --fail-under=$COVERAGE_FAIL_UNDER
+                    '''
+                }
             }
         }
-
         stage('Push to GHCR') {
             steps {
-                withCredentials([string(credentialsId: 'ghcr-pat', variable: 'GHCR_PAT')]) {
-                    sh """
-                        set -e
-                        echo "\$GHCR_PAT" | docker login ghcr.io -u \${REGISTRY#*/} --password-stdin
-                        docker push \$REGISTRY/\$IMAGE:\$TAG
-                    """
+                container('docker') {
+                    withCredentials([string(credentialsId: 'ghcr-pat', variable: 'GHCR_PAT')]) {
+                        sh '''
+                            set -e
+                            echo "$GHCR_PAT" | docker login ghcr.io -u ${REGISTRY#*/} --password-stdin
+                            docker push $REGISTRY/$IMAGE:$TAG
+                        '''
+                    }
                 }
             }
         }
-
         stage('Deploy GREEN') {
             steps {
-                withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                    sh """
-                        set -e
-                        export KUBECONFIG=\$KUBECONFIG
-                        kubectl config use-context rancher-desktop
-
-                        helm upgrade --install \$GREEN_RELEASE ./helm/django-app \
-                          --set color=green \
-                          --set image.repository=\$REGISTRY/\$IMAGE \
-                          --set image.tag=\$TAG \
-                          --set serviceAccount.create=true
-                    """
+                container('helm') {
+                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
+                        sh '''
+                            set -e
+                            export KUBECONFIG=$KUBECONFIG
+                            kubectl config use-context rancher-desktop
+                            helm upgrade --install $GREEN_RELEASE ./helm/django-app \
+                              --set color=green \
+                              --set image.repository=$REGISTRY/$IMAGE \
+                              --set image.tag=$TAG \
+                              --set serviceAccount.create=true
+                        '''
+                    }
                 }
             }
         }
-
         stage('Wait for GREEN rollout') {
             steps {
-                withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                    sh """
-                        set -e
-                        export KUBECONFIG=\$KUBECONFIG
-                        kubectl config use-context rancher-desktop
-
-                        kubectl rollout status deployment/\${GREEN_RELEASE}-django-app --timeout=120s
-                    """
+                container('kubectl') {
+                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
+                        sh '''
+                            set -e
+                            export KUBECONFIG=$KUBECONFIG
+                            kubectl config use-context rancher-desktop
+                            kubectl rollout status deployment/${GREEN_RELEASE}-django-app --timeout=120s
+                        '''
+                    }
                 }
             }
         }
-
-        // ------------------------------------------------------------
-        // TDD Stage 3: Smoke Test (live GREEN environment)
-        // ------------------------------------------------------------
         stage('Smoke test GREEN') {
             steps {
-                withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                    sh """
-                        set -e
-                        export KUBECONFIG=\$KUBECONFIG
-                        kubectl config use-context rancher-desktop
-
-                        GREEN_SVC="\${GREEN_RELEASE}-django-app"
-
-                        echo "Running smoke test against service: \$GREEN_SVC"
-
-                        IP=\$(kubectl get svc \$GREEN_SVC -o jsonpath='{.spec.clusterIP}')
-                        echo "Service IP: \$IP"
-
-                        STATUS=\$(kubectl run smoke-test --rm -i --restart=Never \
-                          --image=curlimages/curl:8.5.0 \
-                          -- curl -s -o /dev/null -w "%{http_code}" http://\$IP:8000/health/)
-
-                        echo "Smoke test status: \$STATUS"
-
-                        if [ "\$STATUS" != "200" ]; then
-                            echo "Smoke test FAILED"
-                            exit 1
-                        fi
-
-                        echo "Smoke test PASSED"
-                    """
+                container('kubectl') {
+                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
+                        sh '''
+                            set -e
+                            export KUBECONFIG=$KUBECONFIG
+                            kubectl config use-context rancher-desktop
+                            GREEN_SVC="${GREEN_RELEASE}-django-app"
+                            IP=$(kubectl get svc $GREEN_SVC -o jsonpath='{.spec.clusterIP}')
+                            STATUS=$(kubectl run smoke-test --rm -i --restart=Never \
+                              --image=curlimages/curl:8.5.0 \
+                              -- curl -s -o /dev/null -w "%{http_code}" http://$IP:8000/health/)
+                            if [ "$STATUS" != "200" ]; then
+                                echo "Smoke test FAILED"
+                                exit 1
+                            fi
+                            echo "Smoke test PASSED"
+                        '''
+                    }
                 }
             }
         }
-
         stage('Switch traffic to GREEN') {
             steps {
-                withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                    sh """
-                        set -e
-                        export KUBECONFIG=\$KUBECONFIG
-                        kubectl config use-context rancher-desktop
-
-                        cat > /tmp/ingress-patch.json <<'EOF'
-{
-  "spec": {
-    "rules": [
-      {
-        "host": "\${HOST}",
-        "http": {
-          "paths": [
-            {
-              "path": "/",
-              "pathType": "Prefix",
-              "backend": {
-                "service": {
-                  "name": "\${GREEN_RELEASE}-django-app",
-                  "port": {
-                    "number": 8000
-                  }
-                }
-              }
-            }
-          ]
-        }
-      }
-    ]
-  }
-}
-EOF
-
-                        kubectl patch ingress django-app --type merge -p "\$(cat /tmp/ingress-patch.json)"
-                    """
+                container('kubectl') {
+                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
+                        sh '''
+                            set -e
+                            export KUBECONFIG=$KUBECONFIG
+                            kubectl config use-context rancher-desktop
+                            cp app/ingress-patch.json /tmp/ingress-patch.json
+                            sed -i "s/REPLACE_HOST/$HOST/g" /tmp/ingress-patch.json
+                            sed -i "s/REPLACE_SERVICE_NAME/${GREEN_RELEASE}-django-app/g" /tmp/ingress-patch.json
+                            kubectl patch ingress django-app --type merge -p "$(cat /tmp/ingress-patch.json)"
+                        '''
+                    }
                 }
             }
         }
-
         stage('Optional: Cleanup BLUE') {
-            when {
-                expression { return false }
-            }
+            when { expression { false } }
             steps {
-                withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                    sh """
-                        set -e
-                        export KUBECONFIG=\$KUBECONFIG
-                        kubectl config use-context rancher-desktop
-
-                        helm uninstall \$BLUE_RELEASE || true
-                    """
+                container('helm') {
+                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
+                        sh '''
+                            set -e
+                            export KUBECONFIG=$KUBECONFIG
+                            kubectl config use-context rancher-desktop
+                            helm uninstall $BLUE_RELEASE || true
+                        '''
+                    }
                 }
             }
         }
     }
-    }
+}
