--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -21,7 +21,11 @@ spec:
 
     - name: kaniko
       image: gcr.io/kaniko-project/executor:latest
-      command: ['cat']
+      command:
+        - /busybox/sh
+      args:
+        - -c
+        - "sleep 9999999"
       tty: true
       volumeMounts:
         - name: workspace-volume
