--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -20,7 +20,7 @@ spec:
           mountPath: /home/jenkins/agent
 
     - name: kaniko
-      image: gcr.io/kaniko-project/executor:latest
+      image: gcr.io/kaniko-project/executor:debug
       command:
         - /busybox/sh
       args:
