Update ghrc with username

--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -67,7 +67,7 @@ spec:
     }
 
     environment {
-        REGISTRY = "ghcr.io/YOUR_GITHUB_USERNAME"
+        REGISTRY = "ghcr.io/jaosullivan"
         IMAGE    = "django-app"
         TAG      = "latest"
 
