--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -158,7 +158,7 @@ EOF
 
         stage('Wait for GREEN rollout') {
             steps {
-                container('kubectl') {
+                container('k8s-tools') {
                     withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
                         sh '''
                             set -e
@@ -174,7 +174,7 @@ EOF
 
         stage('Smoke test GREEN') {
             steps {
-                container('kubectl') {
+                container('k8s-tools') {
                     withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
                         sh '''
                             set -e
@@ -202,7 +202,7 @@ EOF
 
         stage('Switch traffic to GREEN') {
             steps {
-                container('kubectl') {
+                container('k8s-tools') {
                     withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
                         sh '''
                             set -e
@@ -223,7 +223,7 @@ EOF
         stage('Optional: Cleanup BLUE') {
             when { expression { false } }
             steps {
-                container('helm') {
+                container('k8s-tools') {
                     withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
                         sh '''
                             set -e
