--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -108,50 +108,49 @@ spec:
         }
 
         stage('Build image (Kaniko)') {
-    steps {
-        container('kaniko') {
-            withCredentials([string(credentialsId: 'ghcr-pat', variable: 'GHCR_PAT')]) {
-                sh '''
-                    set -e
+            steps {
+                container('kaniko') {
+                    withCredentials([string(credentialsId: 'ghcr-pat', variable: 'GHCR_PAT')]) {
+                        sh '''
+                            set -e
 
-                    mkdir -p /kaniko/.docker
-                    cat <<EOF > /kaniko/.docker/config.json
-                    {
-                      "auths": {
-                        "ghcr.io": {
-                          "auth": "$(echo -n ${REGISTRY#*/}:$GHCR_PAT | base64)"
-                        }
-                      }
-                    }
+                            mkdir -p /kaniko/.docker
+                            cat <<EOF > /kaniko/.docker/config.json
+                            {
+                              "auths": {
+                                "ghcr.io": {
+                                  "auth": "$(echo -n ${REGISTRY#*/}:$GHCR_PAT | base64)"
+                                }
+                              }
+                            }
 EOF
 
-                    /kaniko/executor \
-                      --context `pwd`/projects/django-app \
-                      --dockerfile `pwd`/projects/django-app/Dockerfile \
-                      --destination $REGISTRY/$IMAGE:$TAG \
-                      --cache=true
-                '''
+                            /kaniko/executor \
+                              --context `pwd`/projects/django-app \
+                              --dockerfile `pwd`/projects/django-app/Dockerfile \
+                              --destination $REGISTRY/$IMAGE:$TAG \
+                              --cache=true
+                        '''
+                    }
+                }
             }
         }
-    }
-}
 
         stage('Deploy GREEN') {
             steps {
                 container('k8s-tools') {
-                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                        sh '''
-                            set -e
-                            export KUBECONFIG=$KUBECONFIG
-                            kubectl config use-context rancher-desktop
+                    sh '''
+                        set -e
 
-                            helm upgrade --install $GREEN_RELEASE ./helm/django-app \
-                              --set color=green \
-                              --set image.repository=$REGISTRY/$IMAGE \
-                              --set image.tag=$TAG \
-                              --set serviceAccount.create=true
-                        '''
-                    }
+                        # Use in-cluster Kubernetes API
+                        echo "Using in-cluster Kubernetes credentials"
+
+                        helm upgrade --install $GREEN_RELEASE ./helm/django-app \
+                          --set color=green \
+                          --set image.repository=$REGISTRY/$IMAGE \
+                          --set image.tag=$TAG \
+                          --set serviceAccount.create=true
+                    '''
                 }
             }
         }
@@ -159,15 +158,10 @@ EOF
         stage('Wait for GREEN rollout') {
             steps {
                 container('k8s-tools') {
-                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                        sh '''
-                            set -e
-                            export KUBECONFIG=$KUBECONFIG
-                            kubectl config use-context rancher-desktop
-
-                            kubectl rollout status deployment/${GREEN_RELEASE}-django-app --timeout=120s
-                        '''
-                    }
+                    sh '''
+                        set -e
+                        kubectl rollout status deployment/${GREEN_RELEASE}-django-app --timeout=120s
+                    '''
                 }
             }
         }
@@ -175,27 +169,23 @@ EOF
         stage('Smoke test GREEN') {
             steps {
                 container('k8s-tools') {
-                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                        sh '''
-                            set -e
-                            export KUBECONFIG=$KUBECONFIG
-                            kubectl config use-context rancher-desktop
+                    sh '''
+                        set -e
 
-                            GREEN_SVC="${GREEN_RELEASE}-django-app"
-                            IP=$(kubectl get svc $GREEN_SVC -o jsonpath='{.spec.clusterIP}')
+                        GREEN_SVC="${GREEN_RELEASE}-django-app"
+                        IP=$(kubectl get svc $GREEN_SVC -o jsonpath='{.spec.clusterIP}')
 
-                            STATUS=$(kubectl run smoke-test --rm -i --restart=Never \
-                              --image=curlimages/curl:8.5.0 \
-                              -- curl -s -o /dev/null -w "%{http_code}" http://$IP:8000/health/)
+                        STATUS=$(kubectl run smoke-test --rm -i --restart=Never \
+                          --image=curlimages/curl:8.5.0 \
+                          -- curl -s -o /dev/null -w "%{http_code}" http://$IP:8000/health/)
 
-                            if [ "$STATUS" != "200" ]; then
-                                echo "Smoke test FAILED"
-                                exit 1
-                            fi
+                        if [ "$STATUS" != "200" ]; then
+                            echo "Smoke test FAILED"
+                            exit 1
+                        fi
 
-                            echo "Smoke test PASSED"
-                        '''
-                    }
+                        echo "Smoke test PASSED"
+                    '''
                 }
             }
         }
@@ -203,19 +193,15 @@ EOF
         stage('Switch traffic to GREEN') {
             steps {
                 container('k8s-tools') {
-                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                        sh '''
-                            set -e
-                            export KUBECONFIG=$KUBECONFIG
-                            kubectl config use-context rancher-desktop
+                    sh '''
+                        set -e
 
-                            cp app/ingress-patch.json /tmp/ingress-patch.json
-                            sed -i "s/REPLACE_HOST/$HOST/g" /tmp/ingress-patch.json
-                            sed -i "s/REPLACE_SERVICE_NAME/${GREEN_RELEASE}-django-app/g" /tmp/ingress-patch.json
+                        cp app/ingress-patch.json /tmp/ingress-patch.json
+                        sed -i "s/REPLACE_HOST/$HOST/g" /tmp/ingress-patch.json
+                        sed -i "s/REPLACE_SERVICE_NAME/${GREEN_RELEASE}-django-app/g" /tmp/ingress-patch.json
 
-                            kubectl patch ingress django-app --type merge -p "$(cat /tmp/ingress-patch.json)"
-                        '''
-                    }
+                        kubectl patch ingress django-app --type merge -p "$(cat /tmp/ingress-patch.json)"
+                    '''
                 }
             }
         }
@@ -224,14 +210,10 @@ EOF
             when { expression { false } }
             steps {
                 container('k8s-tools') {
-                    withCredentials([file(credentialsId: 'kubeconfig-rancher', variable: 'KUBECONFIG')]) {
-                        sh '''
-                            set -e
-                            export KUBECONFIG=$KUBECONFIG
-                            kubectl config use-context rancher-desktop
-                            helm uninstall $BLUE_RELEASE || true
-                        '''
-                    }
+                    sh '''
+                        set -e
+                        helm uninstall $BLUE_RELEASE || true
+                    '''
                 }
             }
         }
