Update Jenkinsfile with k8s-tools rbac

--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -8,7 +8,7 @@ metadata:
   labels:
     jenkins/label: jenkins-jenkins-agent
 spec:
-  serviceAccountName: default
+  serviceAccountName: jenkins
 
   containers:
     - name: python
