Update Jenkinsfile with k8s-tools container 7

--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -150,6 +150,7 @@ EOF
                           --set image.repository=$REGISTRY/$IMAGE \
                           --set image.tag=$TAG \
                           --set serviceAccount.create=true
+                          --set ingress.enabled=false
                     '''
                 }
             }
