Update Jenkinsfile with k8s-tools container 8

--- a/projects/django-app/Jenkinsfile
+++ b/projects/django-app/Jenkinsfile
@@ -145,11 +145,12 @@ EOF
 
                         cd projects/django-app
 
+                        # Deploy GREEN without creating an Ingress
                         helm upgrade --install $GREEN_RELEASE helm/django-app \
                           --set color=green \
                           --set image.repository=$REGISTRY/$IMAGE \
                           --set image.tag=$TAG \
-                          --set serviceAccount.create=true
+                          --set serviceAccount.create=true \
                           --set ingress.enabled=false
                     '''
                 }
