Update Jenkinsfile with k8s-tools container 9

--- a/projects/django-app/k8s/rbac/jenkins-rbac.yaml
+++ b/projects/django-app/k8s/rbac/jenkins-rbac.yaml
@@ -44,6 +44,19 @@ rules:
       - patch
       - delete
 
+  # Batch Jobs (Helm migration hooks)
+  - apiGroups: ["batch"]
+    resources:
+      - jobs
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+
   # Ingress resources
   - apiGroups: ["networking.k8s.io"]
     resources:
