Update Jenkinsfile with k8s-tools container 10

--- a/projects/django-app/k8s/rbac/jenkins-rbac.yaml
+++ b/projects/django-app/k8s/rbac/jenkins-rbac.yaml
@@ -70,7 +70,7 @@ rules:
       - patch
       - delete
 
-  # Events (optional but useful for rollout debugging)
+  # Events
   - apiGroups: [""]
     resources:
       - events
