--- a/projects/django-app/helm/django-app/templates/migrate-job.yaml
+++ b/projects/django-app/helm/django-app/templates/migrate-job.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.migrate.enabled }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -44,3 +45,4 @@ spec:
                   key: {{ $key }}
             {{- end }}
             {{- end }}
+{{- end }}
