Update Jenkinsfile with k8s-tools container 14

--- a/projects/django-app/helm/django-app/values.yaml
+++ b/projects/django-app/helm/django-app/values.yaml
@@ -18,7 +18,8 @@ image:
   tag: dev
   pullPolicy: IfNotPresent     # GHCR-friendly
 
-imagePullSecrets: []
+imagePullSecrets:
+  - name: ghcr-secret
 
 # -------------------------------------------------------------------
 # Naming
